Temp fixes for fotter spacing

--- a/src/styles/puma/footer.st.css
+++ b/src/styles/puma/footer.st.css
@@ -31,9 +31,9 @@
 
 @st-scope LocalEyes {
   Footer {
+    border-top: 1px solid rgb(255 255 255 / 19%);
     background: #111;
     min-height: 70px;
-    margin-top: 30vh;
   }
 
   Footer::navList {
