--- a/src/styles/puma/solution.st.css
+++ b/src/styles/puma/solution.st.css
@@ -42,7 +42,9 @@
 @st-scope InchesTheme {
 
 
-  Solution {}
+  Solution {
+    padding-bottom: 20vh;
+  }
 
   .subCategory {}
 
